<resources>
    <string name="app_name">Lets</string>

    <string-array name="planets_array">
        <item>Closest</item>
        <item>Soonest</item>
        <item>Newly Created</item>
    </string-array>

    <string-array name="categories">
        <item>Party</item>
        <item>Eating &amp; Drinking</item>
        <item>Studying</item>
        <item>TV &amp; Movies</item>
        <item>Video games</item>
        <item>Sports</item>
        <item>Music</item>
        <item>Relax</item>
        <item>Other</item>
        <item>Announcement</item>

    </string-array>

    <string-array name="entities_array">
        <item>Events</item>
        <item>People</item>
        <item>Groups</item>
    </string-array>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_create">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 Mile</item>
        <item>10 Miles</item>
        <item>20 Miles</item>
        <item>30 Miles</item>
        <item>40 Miles</item>
        <item>50 Miles</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_select_location">Map</string>
    <string name="descriptionText">Tell us why it\'s so cool</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_birthday">Birthday</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_detail">Profile Info</string>
    <string name="account_created">Account Created!</string>
    <string name="respond_to_friend">Respond to friend request</string>
    <string name="friend_sent">Friend request sent</string>
    <string name="add_friend">Add Friend</string>
    <string name="join_group">Join Group</string>
    <string name="title">Title</string>
    <string name="image_desc">Display the entity\'s profile picture here</string>
    <string name="line_2">Line 2</string>
    <string name="title_activity_new_search">NewSearchActivity</string>
    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_invite_friends_to_group">Invite Friends</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_create_new_event">CreateNewEvent</string>
    <string name="when_were_you_born">When were you born?</string>
    <string name="birthday">Birthday</string>
    <string name="next">Next</string>
    <string name="no_events">No Events</string>
    <string name="go_to_explore">Go to explore</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="search">search</string>
    <string name="load_more">Load More</string>
    <string name="title_search_entity">Title</string>
    <string name="icon">icon</string>
    <string name="logout">Logout</string>


    <string-array name="jokes_array">
        <item>{"joke": "words", "credit" : "name"}</item>
        <item>{"joke2": "words", "credit" : "name"}</item>
        <item>{"joke3": "words", "credit" : "name"}</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_collage">CollageActivity</string>
    <string name="title_activity_admin_settings">AdminSettingsActivity</string>
</resources>
