<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.main.lets.lets.Activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.main.lets.lets.Activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.main.lets.lets.Activities.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.main.lets.lets.Activities.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_perm_device_information_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
