<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="1dp">

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="100dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/txt_entity_title"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:layout_alignTop="@+id/image"
            android:layout_toEndOf="@+id/image"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/image" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/image"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:contentDescription="@string/image_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/line_2"
            android:id="@+id/txt_entity_detail"
            android:layout_below="@+id/txt_entity_title"
            android:layout_toEndOf="@+id/image"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_toRightOf="@+id/image" />


    </RelativeLayout>

</android.support.v7.widget.CardView>